--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,6 +1,6 @@
 [snowflake]
 account = "[ACCOUNT IDENTIFIER]"
 user = "[USER NAME]"
-password = "[PASSWORD]"
+api_key = "[YOUR PERSONAL ACCESS TOKEN GOES HERE]"
 role = "[ROLE]"
 host = "[ACCOUNT IDENTIFIER].snowflakecomputing.com"
